// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fast-action-output Renders \`fast-action-output\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title="Label"
>
  <c-enabled-field-stub
    value="true"
  />
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Output
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`fast-action-output Renders \`fast-action-output\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
  optional="true"
  title=""
>
  <c-enabled-field-stub />
  <div
    class="v-input v-input--is-disabled theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--is-disabled theme--light"
            style="left: 0px; position: absolute;"
          >
            Output
          </label>
          <input
            disabled="disabled"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
